[package]
name = "rtui"
version = "0.1.0"
edition = "2021"
description = "Ui for Rusty Tasks"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
crossterm = "0.27.0"
directories = "5.0.1"
ratatui = { version = "0.22.0", features = ["all-widgets", "macros"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
tui-input = "0.8.0"
